# ikaros

Source/UserModules/: CMakeLists.txt  OscComm_direct_pos.ikc  OscComm_with_triggerandhold_pos.ikc  mkmodule.sh  mkmodule_linux.sh
Source/UserModules/Atanh/: Atanh.cc  Atanh.h  Atanh.ikc  CMakeLists.txt
Source/UserModules/Collector/: CMakeLists.txt  Collector.cc  Collector.h  Collector.ikc
Source/UserModules/ConceptorCalc/: CMakeLists.txt  ConceptorCalc.cc  ConceptorCalc.h  ConceptorCalc.ikc
Source/UserModules/ConceptorSimilarity/: CMakeLists.txt  ConceptorSimilarity.cc  ConceptorSimilarity.h  ConceptorSimilarity.ikc
Source/UserModules/CorrelationCalc/: CMakeLists.txt  CorrelationCalc.cc  CorrelationCalc.h  CorrelationCalc.ikc
Source/UserModules/InputSelector/: InputSelector.cc  InputSelector.h  InputSelector.ikc
Source/UserModules/LinAlgTest/: CMakeLists.txt  LinAlgTest.cc  LinAlgTest.h  LinAlgTest.ikc
Source/UserModules/ListIterator/: ListIterator.cc  ListIterator.ikc
Source/UserModules/Map/: Map.cc  Map.ikc
Source/UserModules/MatrixList/: CMakeLists.txt  MatrixList.cc  MatrixList.h  MatrixList.ikc
Source/UserModules/MatrixRotation/: MatrixRotation.cc
Source/UserModules/Models/: InvertReservoirFunction.ikc  conceptor_system_basic.ikc
Source/UserModules/OscComm/: CMakeLists.txt  OscComm.cc  OscComm.h  OscComm.ikc
Source/UserModules/OscListener/: CMakeLists.txt  OscListener.cc  OscListener.h  OscListener.ikc
Source/UserModules/RepMat/: CMakeLists.txt  RepMat.cc  RepMat.h  RepMat.ikc
Source/UserModules/ReservoirNetwork/: CMakeLists.txt  (+3 more)
(+64 files in other folders)
