set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(ConceptorSimilarity)
add_subdirectory(Groups)
add_subdirectory(MatrixList)
add_subdirectory(InputSelector)
add_subdirectory(ListIterator)
add_subdirectory(RepMat)
add_subdirectory(Map)
add_subdirectory(Collector)
add_subdirectory(RidgeRegression)
add_subdirectory(Atanh)
add_subdirectory(ConceptorCalc)
add_subdirectory(CorrelationCalc)
add_subdirectory(LinAlgTest)
add_subdirectory(SparseMatrix)
add_subdirectory(ReservoirNetwork)

set(SOURCE ${SOURCE} PARENT_SCOPE)
set(MODULES_INCLUDS ${MODULES_INCLUDS} PARENT_SCOPE)
set(MODULES_LIBS ${MODULES_LIBS} PARENT_SCOPE)
